Fix profile image on mobile

--- a/css/tweet_select_view.css
+++ b/css/tweet_select_view.css
@@ -28,4 +28,5 @@
     font-size: 1em;
     outline: none;
     text-overflow: ellipsis;
+    border-radius: 0;
 }
